Box Size Fix for TID Clipping Caused by long OT
I simply increased the width parameters of the pokemon card box.

https://i.imgur.com/bGRpKeV.png?1

I'm thinking it should maybe be changed to 200px, but after some testing it looks like 180px will work universally.

--- a/client/styles/importer.less
+++ b/client/styles/importer.less
@@ -298,7 +298,7 @@ md-card.box-card md-card-content {
 
 @media (min-width: 600px) {
   .pokemon-card-mini {
-    width: 166px;
+    width: 180px;
     height: 220px;
   }
 
